# memevis

./: .rustfmt.toml  Cargo.toml  Justfile  Makefile
src/: any.rs  ctx.rs  errors.rs  lib.rs
src/assets/: shader.frag  shader.vert
src/visual/: colors.rs  io.rs  mod.rs  types.rs  vis.rs
src/visual/gui/: layer.rs  mod.rs  style.rs  text.rs  ui.rs
src/visual/gui/layouts/: hint.rs  layout.rs  mod.rs  resize_layout.rs  util.rs  vert_layout.rs
src/visual/gui/widgets/: button.rs  debug.rs  label.rs  mod.rs  widget.rs  window.rs
src/visual/render/: atlas.rs  font.rs  glium_renderer.rs  mod.rs  painter.rs  texture.rs
