[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "memevis"
repository = "https://github.com/Edgeworth/memevis"
version = "0.1.0"

[dependencies]
derive_more = "0.99.17"
dyn-clone = "1.0.9"
eyre = "0.6.8"
freetype-rs = "0.26.0"
glium = "0.32.1"
harfbuzz_rs = "2.0.1"
log = "0.4.17"
lyon = "1.0.0"
num = "0.4.0"
num-traits = "0.2.15"
paste = "1.0.9"
rgb = "0.8.34"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["arbitrary_precision"] }
tempfile = "3.3.0"
typetag = "0.2.3"
