[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "memevis"
repository = "https://github.com/Edgeworth/memevis"
version = "0.1.0"

[dependencies]
ahash = "0.8.12"
derive_more = {version = "2.0.1", features = ["full"]}
dyn-clone = "1.0.19"
eyre = "0.6.12"
freetype-rs = "0.26.0"
glium = "0.36.0"
harfbuzz_rs = "2.0.1"
log = "0.4.27"
lyon = "1.0.1"
num = "0.4.3"
num-traits = "0.2.19"
paste = "1.0.15"
rgb = "0.8.52"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.141", features = ["arbitrary_precision"]}
tempfile = "3.20.0"
typetag = "0.2.20"
winit = "0.30.11"
